--- a/source/sass/abstracts/mixins.scss
+++ b/source/sass/abstracts/mixins.scss
@@ -11,7 +11,7 @@
 
 @mixin visually-hidden {
   position: absolute;
-  
+
   width: 1px;
   height: 1px;
   margin: -1px;
@@ -27,6 +27,7 @@
   font-size: 40px;
   line-height: 49px;
   letter-spacing: -0.02em;
+  text-transform: uppercase;
 }
 
 @mixin desktop-subtitle {
@@ -34,4 +35,9 @@
   font-size: 28px;
   line-height: 34px;
   letter-spacing: -0.02em;
+}
+
+@mixin mobile-title {
+  font-size: 24px;
+  line-height: 29px;
 }
