--- a/source/sass/abstracts/variables.scss
+++ b/source/sass/abstracts/variables.scss
@@ -19,6 +19,8 @@ $title-color: #1fc0fc;
 $description-color: #484848;
 $decor-color: #ffc341;
 $gradient: linear-gradient(108.42deg, #FFC341 20.46%, #FFD701 65.31%);
+$gradient-hover: linear-gradient(143.55deg, #FFC341 -50.3%, #FFD701 63.1%);
+$gradient-active:radial-gradient(150% 119.49% at 50% 50.85%, rgba(0, 0, 0, 0) 30.67%, rgba(3, 3, 3, 0.24) 100%), linear-gradient(143.55deg, #FFC341 -50.3%, #FFD701 63.1%);
 
 $transition: 0.3s;
 $active-state-opacity: 0.4;
