--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,4 +4,10 @@
 @import "./base/normalize";
 @import "./base/visually-hidden";
 @import "./grid/wrapper.scss";
+@import "./components/btn.scss";
+@import "./components/input.scss";
+@import "./components/checkbox.scss";
 @import "./blocks/page-header.scss";
+@import "./blocks/overlay.scss";
+@import "./blocks/feedback-form.scss";
+@import "./blocks/about-program.scss";
