--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,11 +3,11 @@
 @import "./base/global";
 @import "./base/normalize";
 @import "./base/visually-hidden";
-@import "./grid/wrapper.scss";
-@import "./components/btn.scss";
-@import "./components/input.scss";
-@import "./components/checkbox.scss";
-@import "./blocks/page-header.scss";
-@import "./blocks/overlay.scss";
-@import "./blocks/feedback-form.scss";
-@import "./blocks/about-program.scss";
+@import "./grid/wrapper";
+@import "./components/btn";
+@import "./components/checkbox";
+@import "./blocks/page-header";
+@import "./blocks/overlay";
+@import "./blocks/feedback-form";
+@import "./blocks/about-program";
+@import "./blocks/accept";
