--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -1,14 +1,4 @@
 .feedback-form {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 480px;
-  padding: 55px 48px 40px 48px;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.1);
-  transform: translate(-50%, -50%);
-
   h2 {
     @include desktop-subtitle;
     margin-top: 0;
@@ -50,12 +40,7 @@
       transition: $transition;
     }
 
-    &:invalid {
-      border-color:#f57676;
-      transition: $transition;
-    }
-
-    &:valid {
+    &:required:valid {
       border-color: #999999;
       transition: $transition;
     }
@@ -95,30 +80,6 @@
       fill: $decor-color;
     }
   }
-
-  button[type="reset"] {
-    position: absolute;
-    top: 25px;
-    right: 30px;
-    width: 20px;
-    height: 20px;
-    border: none;
-    background-color: transparent;
-    padding: 0;
-    background-image: url("../img/close-icon.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    transition: $transition;
-
-    &:hover {
-      opacity: $hover-state-opacity;
-    }
-
-    &:active {
-      opacity: $active-state-opacity;
-    }
-  }
 }
 
 .feedback-form__checkbox {
@@ -128,13 +89,6 @@
 
 @media (max-width: $mobile-width-max) {
   .feedback-form {
-    width: 100%;
-    height: 100%;
-    border-radius: 0;
-    padding: 0 15px;
-    padding-top: 169px;
-    text-align: center;
-
     form {
       align-items: center;
     }
@@ -147,11 +101,6 @@
         padding: 0 10px;
         text-align: left;
       }
-    }
-
-    button[type="reset"] {
-      top: 22px;
-      right: 23px;
     }
 
     h2 {
