--- a/source/sass/blocks/overlay.scss
+++ b/source/sass/blocks/overlay.scss
@@ -6,4 +6,29 @@
   height: 100%;
   background-color: rgba(229, 229, 229, 0.95);
   z-index: 999;
+
+  & > * {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 480px;
+    padding: 55px 48px 40px 48px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.1);
+    transform: translate(-50%, -50%);
+  }
+}
+
+@media (max-width: $mobile-width-max) {
+  .overlay {
+    & > * {
+      width: 100%;
+      height: 100%;
+      border-radius: 0;
+      padding: 0 15px;
+      padding-top: 169px;
+      text-align: center;
+    }
+  }
 }
