--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,8 +6,10 @@
 @import "./grid/wrapper";
 @import "./components/btn";
 @import "./components/checkbox";
+@import "./vendor/swiper";
 @import "./blocks/page-header";
 @import "./blocks/overlay";
 @import "./blocks/feedback-form";
 @import "./blocks/about-program";
 @import "./blocks/accept";
+@import "./blocks/programs";
