--- a/source/sass/abstracts/mixins.scss
+++ b/source/sass/abstracts/mixins.scss
@@ -28,6 +28,7 @@
   line-height: 49px;
   letter-spacing: -0.02em;
   text-transform: uppercase;
+  color: $title-color;
 }
 
 @mixin desktop-subtitle {
@@ -35,9 +36,17 @@
   font-size: 28px;
   line-height: 34px;
   letter-spacing: -0.02em;
+  color: $title-color;
 }
 
 @mixin mobile-title {
+  font-size: 32px;
+  line-height: 39px;
+}
+
+
+@mixin mobile-subtitle {
   font-size: 24px;
   line-height: 29px;
+  letter-spacing: -0.02em;
 }
