--- a/source/sass/blocks/about-program.scss
+++ b/source/sass/blocks/about-program.scss
@@ -2,17 +2,37 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 30px 0 150px 0;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
+  background-position: right top 75%;
 
   h2 {
     @include desktop-title;
+    margin-top: 0;
+    margin-bottom: 20px;
     color: $title-color;
+  }
+
+  p {
+    margin: 0;
+    font-size: 17px;
+    line-height: 29px;
+    text-align: center;
+
+    &:last-of-type {
+      margin-bottom: 50px;
+    }
+
+    span {
+      display: inline-block;
+      padding-left: 21px;
+      padding-right: 10px;
+    }
   }
 
   h2 + p {
     width: 720px;
-    text-align: center;
   }
 }
 
@@ -34,23 +54,114 @@
 
 .about-program__video {
   position: relative;
+  width: 870px;
+  height: 460px;
+
+  img {
+    width: 100%;
+    height: auto;
+  }
 
   button {
     position: absolute;
     top: 50%;
     left: 50%;
-    border: none;
-    background-color: transparent;
+    width: 96px;
+    height: 96px;
+    background-image: url("../img/play-btn-icon.svg");
+    background-repeat: no-repeat;
+    background-size: 100%;
     transform: translate(-50%, -50%);
     cursor: pointer;
+
+    &:hover {
+      background-image: url("../img/play-btn-icon-hover.svg");
+      transition: $transition;
+    }
+
+    &:active {
+      background-image: url("../img/play-btn-icon-active.svg");
+      transition: $transition;
+    }
   }
 }
 
+@media (max-width: $tablet-width-max) {
+  .about-program {
+    h2 {
+      @include mobile-title;
+    }
+
+    p {
+      font-size: 16px;
+      line-height: 26px;
+    }
+
+    p + p {
+      width: auto;
+      padding: 0;
+    }
+
+    span {
+      display: inline-block;
+      padding-left: 21px;
+      padding-right: 10px;
+    }
+  }
+
+  .about-program__video {
+    width: 63.5%;
+    height: 285px;
+  }
+}
 
 @media (max-width: $mobile-width-max) {
   .about-program {
+    padding-bottom: 50px;
+    background-position-y: 230px;
+
+    h2 {
+      margin-bottom: 22px;
+    }
+
     h2 + p {
       width: auto;
+
+      span {
+        display: inline;
+        padding: 0;
+      }
     }
+
+    p {
+      padding: 0 5%;
+      text-align: left;
+
+      &:last-of-type {
+        margin-bottom: 50px;
+      }
+    }
+  }
+
+  .about-program__video {
+    width: 320px;
+    height: 225px;
+
+    img {
+      height: 100%;
+    }
+
+    button {
+      width: 80px;
+      height: 80px;
+    }
+  }
+
+  .webp .about-program {
+    background-image: url("../img/about-background-mobile.webp");
+  }
+
+  .no-webp .about-program {
+    background-image: url("../img/about-background-mobile.jpg");
   }
 }
