Добавляет блок "Хочу поехать"

--- a/source/sass/abstracts/mixins.scss
+++ b/source/sass/abstracts/mixins.scss
@@ -23,6 +23,7 @@
 }
 
 @mixin desktop-title {
+  margin: 0;
   font-family: $second-font;
   font-size: 40px;
   line-height: 49px;
@@ -32,6 +33,7 @@
 }
 
 @mixin desktop-subtitle {
+  margin: 0;
   font-family: $second-font;
   font-size: 28px;
   line-height: 34px;
