--- a/source/sass/abstracts/variables.scss
+++ b/source/sass/abstracts/variables.scss
@@ -17,7 +17,7 @@ $main-font: "FiraSans", "Arial", sans-serif;
 $second-font: "Montserrat", "Arial", sans-serif;
 
 $title-color: #1fc0fc;
-$description-color: #484848;
+$description-color: rgba(72, 72, 72, 0.87);
 $decor-color: #ffc341;
 $gradient: linear-gradient(108.42deg, #FFC341 20.46%, #FFD701 65.31%);
 $gradient-hover: linear-gradient(143.55deg, #FFC341 -50.3%, #FFD701 63.1%);
