--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,8 @@
 @import "./grid/wrapper";
 @import "./components/btn";
 @import "./components/checkbox";
+@import "./components/input";
+@import "./components/error";
 @import "./vendor/swiper";
 @import "./blocks/page-header";
 @import "./blocks/overlay";
@@ -13,3 +15,4 @@
 @import "./blocks/about-program";
 @import "./blocks/accept";
 @import "./blocks/programs";
+@import "./blocks/feedback";
