--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -33,7 +33,7 @@
   display: flex;
   padding-left: 210px;
   padding-right: 210px;
-  padding-bottom: 300px;
+  padding-bottom: 50px;
 }
 
 .programs__names-list {
@@ -191,6 +191,7 @@
 
   &--volunt {
     &::before {
+      background-size: 32px 29px;
       background-image: url("../img/charity-icon-black.svg");
     }
 
@@ -203,6 +204,7 @@
 
   &--religion {
     &::before {
+      background-size: 23px 25px;
       background-image: url("../img/religion-icon-black.svg");
     }
 
@@ -233,6 +235,10 @@
   }
 }
 
+.programs__descriptions {
+  padding-top: 15px;
+}
+
 .programs__descriptions-item {
   position: absolute;
   top: 16px;
@@ -248,6 +254,10 @@
   &--active {
     position: static;
     visibility: visible;
+  }
+
+  br {
+    display: none;
   }
 }
 
@@ -318,6 +328,7 @@
 
   .programs__descriptions {
     width: 100%;
+    padding-top: 0;
   }
 
   .programs__descriptions-item  {
