--- a/source/sass/components/input.scss
+++ b/source/sass/components/input.scss
@@ -6,22 +6,35 @@
   &--default {
     border: 2px solid #e3e3e3;
     border-radius: 80px;
+
+    &:focus {
+      outline: none;
+    }
   }
 
   &--valid {
     border: 2px solid #999999;
     border-radius: 80px;
+
+    &:focus {
+      outline: none;
+    }
   }
 
   &--invalid {
     border: 2px solid #ff0000;
     border-radius: 80px;
+
+    &:focus {
+      outline: none;
+    }
   }
 
   &:focus {
     border: 2px solid $decor-color;
     color: $description-color;
     transition: $transition;
+    outline: none;
   }
 
   &::placeholder {
