--- a/source/sass/blocks/about-program.scss
+++ b/source/sass/blocks/about-program.scss
@@ -48,7 +48,7 @@
   background-image: url("../img/about-background-desktop@1x.jpg");
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../img/about-backrgound-desktop@2x.jpg");
+    background-image: url("../img/about-background-desktop@2x.jpg");
   }
 }
 
@@ -82,6 +82,10 @@
     &:active {
       background-image: url("../img/play-btn-icon-active.svg");
       transition: $transition;
+    }
+
+    &:focus {
+      outline: none;
     }
   }
 }
