--- a/source/sass/blocks/more-info.scss
+++ b/source/sass/blocks/more-info.scss
@@ -300,7 +300,7 @@
     padding-bottom: 62px;
 
     h2 {
-      margin-left: 5%;
+      width: 100%;
       margin-bottom: 26px;
       text-align: center;
     }
