--- a/source/sass/blocks/questions.scss
+++ b/source/sass/blocks/questions.scss
@@ -224,6 +224,10 @@
       &:last-of-type {
         margin-bottom: 0;
         padding-top: 2px;
+
+        h3 {
+          padding-right: 60px;
+        }
       }
     }
   }
