--- a/source/sass/components/checkbox.scss
+++ b/source/sass/components/checkbox.scss
@@ -4,6 +4,10 @@
   height: 16px;
   border: 2px solid $decor-color;
   border-radius: 2px;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 input[type="checkbox"]:checked + .checkbox {
