--- a/source/sass/blocks/questions.scss
+++ b/source/sass/blocks/questions.scss
@@ -39,8 +39,7 @@
     cursor: pointer;
 
     &::before {
-      counter-increment: li;
-      content: counter(li);
+      content: attr(data-number);
       position: absolute;
       display: flex;
       align-items: center;
@@ -56,7 +55,6 @@
       text-align: center;
       background-image: $gradient;
       background-clip: text;
-      -webkit-text-fill-color: transparent;
     }
   }
 
