--- a/source/sass/blocks/more-info.scss
+++ b/source/sass/blocks/more-info.scss
@@ -1,4 +1,8 @@
 .more-info {
+  background-repeat: no-repeat;
+  background-size: 420px 100%;
+  background-position: left bottom;
+
   h2 {
     @include desktop-title;
     margin-bottom: 50px;
@@ -47,6 +51,22 @@
   }
 }
 
+.webp .more-info {
+  background-image: url("../img/more-background-desktop@1x.webp");
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/more-background-desktop@2x.webp");
+  }
+}
+
+.no-webp .more-info {
+  background-image: url("../img/more-background-desktop@1x.jpg");
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/more-background-desktop@2x.jpg");
+  }
+}
+
 .more-info__container {
   position: relative;
   display: flex;
@@ -54,11 +74,11 @@
   align-items: baseline;
   padding-top: 37px;
   padding-left: 110px;
-  padding-bottom: 73px;
+  padding-bottom: 94px;
 
   picture {
-    margin-top: -387px;
-    margin-bottom: 72px;
+    margin-top: -392px;
+    margin-bottom: 28px;
     margin-left: auto;
   }
 }
@@ -80,7 +100,7 @@
 }
 
 .more-info__curator-description-container {
-  margin-bottom: 30px;
+  margin-bottom: 26px;
   padding-top: 2px;
 
   p {
@@ -237,17 +257,27 @@
 }
 
 @media (max-width: $tablet-width-max) {
+  .webp .more-info {
+    background-image: none;
+  }
+
+  .no-webp .more-info {
+    background-image: none;
+  }
+
   .more-info__container {
     flex-direction: column;
-    align-items: center;
+    padding-right: 0;
     padding-left: 5%;
-    padding-right: 5%;
 
     h2 {
       @include mobile-title;
+      align-self: center;
     }
 
     picture {
+      display: flex;
+      justify-content: flex-end;
       width: 100%;
       margin: 0;
       margin-bottom: 24px;
@@ -310,6 +340,10 @@
     }
   }
 
+  .more-info__map {
+    align-self: flex-end;
+  }
+
   .more-info__your-city {
     margin-left: 5%;
     margin-right: 5%;
@@ -333,16 +367,18 @@
     }
   }
 
+  .more-info__curator-description-container {
+    margin-bottom: 32px;
+  }
+
   .more-info__form-container {
     padding-left: 5%;
     padding-right: 5%;
     text-align: left;
 
     b {
-      max-width: 278px;
+      max-width: 288px;
       margin-bottom: 4.1%;
-      margin-right: calc((100% - 278px) / 2);
-      margin-left: calc((100% - 278px) / 2);
       padding-top: 0;
       font-size: 16px;
       line-height: 24px;
