--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,4 +1,5 @@
 .page-footer {
+  margin-top: -20px;
   border-top: 1px solid #dadada;
 }
 
@@ -47,6 +48,12 @@
   .page-footer__container {
     padding-left: 8.1%;
     padding-right: 8.1%;
+  }
+}
+
+@media (max-width: $tablet-width-max) {
+  .page-footer {
+    margin-top: unset;
   }
 }
 
