добавляет бэкграунд в блок "Узнать подробности"

--- a/source/sass/blocks/more-info.scss
+++ b/source/sass/blocks/more-info.scss
@@ -1,6 +1,6 @@
 .more-info {
   background-repeat: no-repeat;
-  background-size: 420px 100%;
+  background-size: 420px 708px;
   background-position: left bottom;
 
   h2 {
