--- a/source/sass/blocks/questions.scss
+++ b/source/sass/blocks/questions.scss
@@ -1,7 +1,7 @@
 .questions {
   background-repeat: no-repeat;
-  background-size: 194px 177px, cover;
-  background-position: left -18px bottom, center top 40px;
+  background-size: 154px 172px, 100% 967px;
+  background-position: left bottom, center top 40px;
 
   h2 {
     @include desktop-title;
