исправляет наложение карты

--- a/source/sass/blocks/more-info.scss
+++ b/source/sass/blocks/more-info.scss
@@ -208,6 +208,11 @@
   }
 }
 
+.more-info__map {
+  position: relative;
+  z-index: -1;
+}
+
 @media (max-width: $desktop-width-max) {
   .more-info__container {
     padding-left: 8.1%;
